add: Google AdSense verification script

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2937516149660017"
+        crossorigin="anonymous"></script>
     <meta name="description" content="Convert JPG/PNG images to PDF, Word to PDF, compress and merge PDFs securely and for free up to 100MB per file. PDFStation – Smart file conversion in one simple place." />
     
     <!-- Open Graph / Facebook -->
