--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <!-- Google AdSense -->
+    <!-- AdSense: snippet global e metatag adicionados aqui para verificação de domínio. -->
+    <!-- Google AdSense global snippet (necessário para verificação e exibição de anúncios) -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2937516149660017"
-        crossorigin="anonymous"></script>
+            crossorigin="anonymous"></script>
+    <!-- Google AdSense account verification meta tag -->
+    <meta name="google-adsense-account" content="ca-pub-2937516149660017" />
+    <!-- Debug meta tag para verificação de presença do snippet no código-fonte -->
+    <meta name="pdfstation-adsense-debug" content="adsense-snippet-present" />
     <meta name="description" content="Convert JPG/PNG images to PDF, Word to PDF, compress and merge PDFs securely and for free up to 100MB per file. PDFStation – Smart file conversion in one simple place." />
     
     <!-- Open Graph / Facebook -->
