--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- AdSense: snippet global e metatag adicionados aqui para verificação de domínio. -->
+    <!-- Essas duas linhas são críticas para: -->
+    <!-- 1) verificação do domínio pelo AdSense -->
+    <!-- 2) carregamento dos anúncios em TODAS as páginas da SPA -->
     <!-- Google AdSense global snippet (necessário para verificação e exibição de anúncios) -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2937516149660017"
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2937516149660107"
             crossorigin="anonymous"></script>
     <!-- Google AdSense account verification meta tag -->
-    <meta name="google-adsense-account" content="ca-pub-2937516149660017" />
+    <meta name="google-adsense-account" content="ca-pub-2937516149660107" />
     <!-- Debug meta tag para verificação de presença do snippet no código-fonte -->
     <meta name="pdfstation-adsense-debug" content="adsense-snippet-present" />
     <meta name="description" content="Convert JPG/PNG images to PDF, Word to PDF, compress and merge PDFs securely and for free up to 100MB per file. PDFStation – Smart file conversion in one simple place." />
